--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,60 @@
+{% comment %} Para cagar el CSS {% endcomment %}
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% comment %} Bootstrap {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+
+    {% comment %} decirle a la plantilla dionde estan los archivos CSS {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    {% comment %} Persnalizar la tipogragia Google Font {% endcomment %}
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
+
+
     <title> Django Blog </title>
-</head> 
+</head>
 
 <body>
-        {% comment %} Pra ver si ya vienen los datos  {% endcomment %}
-        {% comment %} {{ posts }} {% endcomment %}
-    <div >
+    {% comment %} Pra ver si ya vienen los datos {% endcomment %}
+    {% comment %} {{ posts }} {% endcomment %}
+    <div class='page-header'>
         <h1><a href="/">Django Blog</a></h1>
     </div>
 
-{% for post in posts  %}
-    <div>
-        <p>Publicado : {{ post.published_date }}</p>
-        <h2> <a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text | linebreaks}}</p>
-    </div>
 
-    <div>
-        {% comment %} Pra ver si ya vienen los datos  {% endcomment %}
-        {% comment %} {{ posts }} {% endcomment %}
-    </div>
-    
-{% endfor %}  
+    <div class="content container">
 
+        <div class="row">
+            <div class="col-md-8">
+
+                {% for post in posts  %}
+                <div class='post'>
+
+                    <div class="date">
+                        <p>Publicado : {{ post.published_date }}</p>
+                    </div>
+
+                    <h2> <a href="">{{ post.title }}</a></h2>
+                    
+                    <p>{{ post.text | linebreaks}}</p>
+                </div>
+                {% endfor %}
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
