--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,6 +33,13 @@
 <body>
 
     <div class='page-header'>
+        {% comment %} Para autentificar y que solo yo pueda crear publicacaciones y usamos condiciones   {% endcomment %}
+        {% if user.is_authenticated %}
+
+        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+
+        {% endif %}
+        
         <h1><a href="/">Django Blog</a></h1>
     </div>
 
